--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,8 +59,10 @@ jobs:
           name: Verify Kson project
           command: ./gradlew --no-daemon check
 
-      # Note: the verify step builds the native binaries for kson-lib, so we can upload them right
-      # away without building them again
+      - run:
+          name: Build native kson-lib
+          command: ./gradlew --no-daemon :kson-lib:nativeRelease
+
       - store_artifacts:
           path: kson-lib/build/bin/nativeKson/releaseShared
           destination: kson-lib-shared
@@ -145,8 +147,10 @@ jobs:
           name: Verify Kson project
           command: ./gradlew --no-daemon check
 
-      # Note: the verify step builds the native binaries for kson-lib, so we can upload them right
-      # away without building them again
+      - run:
+          name: Build native kson-lib
+          command: ./gradlew --no-daemon :kson-lib:nativeRelease
+
       - store_artifacts:
           path: kson-lib/build/bin/nativeKson/releaseShared
           destination: kson-lib-shared
@@ -214,8 +218,10 @@ jobs:
           name: Verify Kson project
           command: ./gradlew --no-daemon check
 
-      # Note: the verify step builds the native binaries for kson-lib, so we can upload them right
-      # away without building them again
+      - run:
+          name: Build native kson-lib
+          command: ./gradlew --no-daemon :kson-lib:nativeRelease
+
       - store_artifacts:
           path: kson-lib/build/bin/nativeKson/releaseShared
           destination: kson-lib-shared
