change version vscode

--- a/tooling/lsp-clients/vscode/package.json
+++ b/tooling/lsp-clients/vscode/package.json
@@ -13,7 +13,7 @@
     }
   ],
   "publisher": "kson-org",
-  "version": "0.0.1",
+  "version": "0.1-0",
   "repository": {
     "type": "git",
     "url": "https://github.com/kson-org/kson"
