Prepare for Jetbrains plugin publishing
Review and polish some metadata in preparation for first publish

--- a/tooling/jetbrains/gradle.properties
+++ b/tooling/jetbrains/gradle.properties
@@ -2,10 +2,10 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = org.kson.jetbrains
-pluginName = Kson
+pluginName = KSON
 
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 0.1.0
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
