--- a/tooling/lsp-clients/package.json
+++ b/tooling/lsp-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kson-lsp-extensions",
-  "version": "0.1.1-SNAPSHOT",
+  "version": "0.1.1",
   "private": true,
   "description": "KSON Language Server Protocol Extensions",
   "workspaces": [
