--- a/lib-python/pyproject.toml
+++ b/lib-python/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "kson"
-version = "0.1.1"
+version = "0.1.2.dev0"
 description = "A love letter to the humans maintaining computer configuration"
 readme = "README.md"
 requires-python = ">=3.10"
