Switch from Kotlin/Native to GraalVM and Krossover
Since Kotlin/Native does not suport musl-based Linux distributions, we
decided to switch to GraalVM as a more mature toolchain. As part of that
change, we had to rewrite the Python and Rust bindings, which are now
automatically generated with a tool I developed for that purpose, called
Krossover.

Regarding the choice to generate the bindings, it was not viable to
update the existing bindings by hand (it would have taken way too much
time and would have been incredibly error prone). Having LLMs update the
bindings wasn't realistic either, since they struggle even with small
changes to the API (I think we would have introduced something like
Krossover even if we had stayed on Kotlin/Native).

A related change is that the native build of kson-lib now only creates
shared libraries. Creating static libraries is _possible_ with GraalVM,
but it is cumbersome, so I think it makes sense postponing it until
users actually ask for it.

Finally, while GraalVM is able to create musl-based binaries, we are not
doing so yet. While musl builds are possible, they are unfortunately not
as easy as toggling a flag, so I suggest we add them in a later PR.

--- a/lib-rust/kson-sys/Cargo.toml
+++ b/lib-rust/kson-sys/Cargo.toml
@@ -8,9 +8,9 @@ license = "Apache-2.0"
 
 [features]
 default = []
-dynamic-linking = []
 
 [build-dependencies]
+anyhow = "1.0.100"
 bindgen = "0.71.0"
 flate2 = "1.1.2"
 tar = "0.4"
