--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,8 @@ org.gradle.jvmargs=-Xmx2048m
 # setting (https://github.com/JetBrains/intellij-platform-gradle-plugin/issues/1789)
 kotlin.stdlib.default.dependency = true
 
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+# disable the DokkaV2 welcome message in the build
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
+
 org.gradle.console=verbose
