--- a/tooling/language-server-protocol/package.json
+++ b/tooling/language-server-protocol/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "kson": "file:../../kson-lib/build/dist/js/productionLibrary",
+    "kson-tooling": "file:../../kson-tooling-lib/build/dist/js/productionLibrary",
     "vscode-languageserver": "^9.0.1",
     "vscode-languageserver-textdocument": "^1.0.12"
   },
