--- a/tooling/language-server-protocol/package.json
+++ b/tooling/language-server-protocol/package.json
@@ -17,6 +17,14 @@
     ".": {
       "types": "./out/index.d.ts",
       "default": "./out/index.js"
+    },
+    "./node": {
+      "types": "./out/index.node.d.ts",
+      "default": "./out/index.node.js"
+    },
+    "./browser": {
+      "types": "./out/index.browser.d.ts",
+      "default": "./out/index.browser.js"
     }
   },
   "scripts": {
