Use GraalVM 21.0.2 as JDK

--- a/jdk.properties
+++ b/jdk.properties
@@ -2,7 +2,7 @@
 # Declare the desired JDK version for our build.  We use the `me.filippov.gradle.jvm.wrapper` Gradle plugin
 # to include this JDK in our Gradle wrapper, making this our truly "built-in" JDK for a trivial and robust
 # developer setup
-JDK_VERSION=17.0.14
+JDK_VERSION=21.0.2
 
 ##
 # Cross-platform download URLs for the version of the JDK we are currently using, used by the
@@ -21,9 +21,9 @@ JDK_VERSION=17.0.14
 #   and `./gradlew check` should also be run to ensure the new JDK is loaded and verified
 unixJvmInstallDir=$APP_HOME/gradle/jdk
 winJvmInstallDir=%APP_HOME%\\gradle\\jdk
-macAarch64JvmUrl=https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_aarch64_mac_hotspot_17.0.14_7.tar.gz
-macX64JvmUrl=https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_x64_mac_hotspot_17.0.14_7.tar.gz
-linuxAarch64JvmUrl = https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_aarch64_linux_hotspot_17.0.14_7.tar.gz
-linuxX64JvmUrl = https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_x64_linux_hotspot_17.0.14_7.tar.gz
-windowsX64JvmUrl = https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.14%2B7/OpenJDK17U-jdk_x64_windows_hotspot_17.0.14_7.zip
+macAarch64JvmUrl=https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_macos-aarch64_bin.tar.gz
+macX64JvmUrl=https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_macos-x64_bin.tar.gz
+linuxAarch64JvmUrl = https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_linux-aarch64_bin.tar.gz
+linuxX64JvmUrl = https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_linux-x64_bin.tar.gz
+windowsX64JvmUrl = https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_windows-x64_bin.zip
 
