--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ commands:
 
       - run:
           name: "Build native kson-lib"
-          command: "./gradlew --no-daemon :kson-lib:nativeRelease"
+          command: "./gradlew --no-daemon :kson-lib:buildWithGraalVmNativeImage"
 
 
   "store-native-artifacts":
