Set versions for `0.2.0` release

--- a/tooling/jetbrains/gradle.properties
+++ b/tooling/jetbrains/gradle.properties
@@ -4,8 +4,8 @@
 pluginGroup = org.kson.jetbrains
 pluginName = KSON
 
-# SemVer format -> https://semver.org
-pluginVersion = 0.1.1
+# [[kson-version-num]]
+pluginVersion = 0.2.0
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
