--- a/lib-python/pyproject.toml
+++ b/lib-python/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 name = "kson-lang"
-version = "0.1.0"
+# [[kson-version-num]]
+version = "0.2.0"
 authors = [
   { name="KSON", email="kson@kson.org" },
 ]
