--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -363,34 +363,34 @@ workflows:
       - "build-windows-amd64":
           filters:
             branches:
-              only: "/^release.*"
+              only: "/release.*\\d+\\.\\d+\\.\\d+$/"
       - "build-macos-arm64":
           filters:
             branches:
-              only: "/^release.*"
+              only: "/release.*\\d+\\.\\d+\\.\\d+$/"
   "build-python-and-test":
     jobs:
       - "build-python-sdist":
           filters:
             branches:
-              only: "/^release.*"
+              only: "/release.*\\d+\\.\\d+\\.\\d+$/"
       - "test-python-sdist-linux-amd64":
           requires:
             - "build-python-sdist"
           filters:
             branches:
-              only: "/^release.*"
+              only: "/release.*\\d+\\.\\d+\\.\\d+$/"
 
       - "test-python-sdist-macos":
           requires:
             - "build-python-sdist"
           filters:
             branches:
-              only: "/^release.*"
+              only: "/release.*\\d+\\.\\d+\\.\\d+$/"
 
       - "test-python-sdist-windows":
           requires:
             - "build-python-sdist"
           filters:
             branches:
-              only: "/^release.*"
+              only: "/release.*\\d+\\.\\d+\\.\\d+$/"
