--- a/lib-rust/kson-sys/Cargo.toml
+++ b/lib-rust/kson-sys/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "kson-sys"
-version = "0.2.0"
+# [[kson-version-num]]
+version = "0.2.0-dev"
 edition = "2024"
 links = "kson"
 description = "Rust bindings to kson-lib"
