--- a/lib-rust/kson/Cargo.toml
+++ b/lib-rust/kson/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "kson-rs"
-version = "0.1.1"
+# [[kson-version-num]]
+version = "0.3.0-dev"
 edition = "2024"
 description = "Idiomatic Rust bindings to kson-lib"
 license = "Apache-2.0"
@@ -9,7 +10,8 @@ license = "Apache-2.0"
 default = []
 
 [dependencies]
-kson-sys = { version = "0.1.0", path = "../kson-sys" }
+# [[kson-version-num]]
+kson-sys = { version = "0.3.0-dev", path = "../kson-sys" }
 
 [dev-dependencies]
 insta = "1.43.1"
