change build dir for jdk
Instead of having a gradle/jdk in the project we now
have the build dir point to ~/.gradle/jdks/graalvm-21.0.2

This allows multiple kson-instantations to use the same
jdk

--- a/jdk.properties
+++ b/jdk.properties
@@ -19,8 +19,8 @@ JDK_VERSION=21.0.2
 #
 # IF THESE URLs CHANGE: `./gradlew wrapper` must be run after any edits for them to take effect,
 #   and `./gradlew check` should also be run to ensure the new JDK is loaded and verified
-unixJvmInstallDir=$APP_HOME/gradle/jdk
-winJvmInstallDir=%APP_HOME%\\gradle\\jdk
+unixJvmInstallDir=$HOME/.gradle/jdks/graalvm-21.0.2
+winJvmInstallDir=%USERPROFILE%\\.gradle\\jdks\\graalvm-21.0.2
 macAarch64JvmUrl=https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_macos-aarch64_bin.tar.gz
 macX64JvmUrl=https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_macos-x64_bin.tar.gz
 linuxAarch64JvmUrl = https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.2/graalvm-community-jdk-21.0.2_linux-aarch64_bin.tar.gz
