--- a/kson-lib/pixi.toml
+++ b/kson-lib/pixi.toml
@@ -2,10 +2,16 @@
 authors = ["Adolfo Ochagavía <github@adolfo.ochagavia.nl>"]
 channels = ["conda-forge"]
 name = "kson"
-platforms = ["win-64"]
+platforms = [
+    "linux-64",
+    "linux-aarch64",
+    "osx-arm64",
+    "osx-64",
+    "win-64",
+]
 version = "0.1.0"
 
 [tasks]
 
-[dependencies]
+[target.win-64.dependencies]
 vs2022_win-64 = ">=19.44.35207,<20"
