--- a/tooling/cli/pixi.toml
+++ b/tooling/cli/pixi.toml
@@ -2,7 +2,13 @@
 authors = ["Adolfo Ochagavía <github@adolfo.ochagavia.nl>"]
 channels = ["conda-forge"]
 name = "cli"
-platforms = ["win-64"]
+platforms = [
+    "linux-64",
+    "linux-aarch64",
+    "osx-arm64",
+    "osx-64",
+    "win-64",
+]
 version = "0.1.0"
 
 [tasks]
