explicitly add jni_simplified.h
In https://github.com/kson-org/kson/pull/246 we started using
`jni_simplified.h`. However, it wasn't added to the `pyproject.toml`.

I've tried to create an integration test that picks this up in a clean
environment, however, I didn't succeed in triggering the error there and
the headers file was included even though we didn't specify it in
`pyproject.toml`. It could to be due to the version of
setuptools being used.

I ran into this bug while working on a project that required
`setuptools >=68.2.2`. Not really sure if that's the case, but
for now I think we could do without a test. If we bump into it again I'd
say we invest more time to properly prevent it from happening again.

--- a/lib-python/pyproject.toml
+++ b/lib-python/pyproject.toml
@@ -46,7 +46,7 @@ packages = ["kson"]
 package-dir = {"" = "src"}
 
 [tool.setuptools.package-data]
-kson = ["kson_api.h", "kson.dll", "libkson.dylib", "libkson.so"]
+kson = ["kson_api.h", "kson.dll", "libkson.dylib", "libkson.so", "jni_simplified.h"]
 
 [dependency-groups]
 dev = [
