feat: add VSCode client support for bundled schemas
- Add bundledSchemaLoader utility to load schemas from extension
- Update languageConfig to extract bundledSchema from package.json
- Update clientOptions to pass bundled schemas via initializationOptions
- Update both node and browser clients to load and pass bundled schemas
- Update StatusBarManager to show (bundled) indicator for bundled schemas
- Add enableBundledSchemas setting to package.json
- Update esbuild to copy schemas directory to dist

--- a/tooling/lsp-clients/vscode/package.json
+++ b/tooling/lsp-clients/vscode/package.json
@@ -39,7 +39,8 @@
           "light": "./dist/extension/assets/kson-icon.png",
           "dark": "./dist/extension/assets/kson-icon.png"
         },
-        "configuration": "./dist/extension/config/language-configuration.json"
+        "configuration": "./dist/extension/config/language-configuration.json",
+        "bundledSchema": null
       }
     ],
     "grammars": [
@@ -71,6 +72,11 @@
     "configuration": {
       "title": "Kson",
       "properties": {
+        "kson.enableBundledSchemas": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable bundled schemas for configured KSON languages. When enabled, KSON languages with bundled schemas will automatically provide hover, completions, and validation."
+        },
         "kson.format.tabSize": {
           "type": "number",
           "default": 2,
