--- a/tooling/cli/gradle.properties
+++ b/tooling/cli/gradle.properties
@@ -3,3 +3,10 @@ org.gradle.configuration-cache = true
 
 # Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching = true
+
+# CLI naming centralizatin — configures CLI command name, file extensions in help text,
+# and the display name in descriptions. Override at build time with -P flags:
+#   ./gradlew :tooling:cli:buildNativeImage -PcliName=myformat -PfileExtension=kxt.kson -PcliDisplayName=MyFormat
+cliName=kson
+fileExtension=kson
+cliDisplayName=KSON
