--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,10 @@ commands:
           name: "Build native kson-lib"
           command: "./gradlew --no-daemon :kson-lib:buildWithGraalVmNativeImage"
 
+      - run:
+          name: "Verify clean checkout"
+          command: "./gradlew --no-daemon verifyCleanCheckout"
+
 
   "store-native-artifacts":
     description: "Store build artifacts in a consistent way"
