Unify version management across all artifacts
kson-tooling-lib was hardcoded at 0.1.2-SNAPSHOT instead of using
KsonVersion.kt, and several tooling packages (vscode, shared, monaco,
language-server-protocol) had stale versions with no [[kson-version-num]]
markers. Add markers and align all versions to 0.3.0-dev.0, and update
the release process checklist to cover these previously-missing artifacts.

--- a/tooling/language-server-protocol/package.json
+++ b/tooling/language-server-protocol/package.json
@@ -10,7 +10,8 @@
       "email": "dmarcotte@gmail.com"
     }
   ],
-  "version": "0.0.1",
+  "//": "[[kson-version-num]]",
+  "version": "0.3.0-dev.0",
   "description": "Kson Language Server implementation in TypeScript",
   "type": "module",
   "exports": {
