--- a/tooling/lsp-clients/monaco/package.json
+++ b/tooling/lsp-clients/monaco/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@kson/monaco-editor",
-  "version": "1.0.0",
+  "//": "[[kson-version-num]]",
+  "version": "0.3.0-dev.0",
   "description": "Monaco editor with KSON language support and LSP integration",
   "type": "module",
   "scripts": {
