--- a/lib-python/pyproject.toml
+++ b/lib-python/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
   { name="KSON", email="kson@kson.org" },
 ]
 description = "KSON: a next-gen configuration language and love letter to the humans maintaining computer configuration"
-readme = "README.md"
+readme = "readme.md"
 requires-python = ">=3.10"
 dependencies = [
     "cffi>=1.17.1",
