Add validateReadme Gradle task for Python README
Runs pytest-codeblocks against readme.md to validate all Python code
examples. Included in the check task. Also fixes 3 code blocks that
were missing imports or variables needed to run standalone.

--- a/lib-python/pyproject.toml
+++ b/lib-python/pyproject.toml
@@ -52,6 +52,7 @@ kson = ["kson_api.h", "kson.dll", "libkson.dylib", "libkson.so", "jni_simplified
 dev = [
     "pyright>=1.1.403",
     "pytest>=8.4.1",
+    "pytest-codeblocks>=0.17.0",
     "ruff>=0.12.8",
     "cibuildwheel>=2.16.0",
     "twine>=6.2.0",
